2014-05-30  Sergio Martin <sergio.martin@artica.es>

	* general/logon_ok.php
	godmode/setup/news.php
	include/functions.php
	pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	index.php
	extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql: Added modal window mode
	to the pandora news for ticket: #821

2014-05-29  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/graphs/pandora.d3.js, include/graphs/functions_d3.php,
	operation/agentes/networkmap.dinamic.php: fixed the css for the
	m$-internet exploter 11. Please Bill Gates travels to Leon.

2014-05-29  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_config.php: Fixed the permission
	checks of the remote config directories on the function
	"config_check".

2014-05-29  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/styles/pandora.css: fixed the css for the
	m$-internet exploter 11. Please Bill Gates travels to Leon.

2014-05-29  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_networkmap.php: improved the source code style.
	
	* extensions/agents_modules.php: fixed the css for the
	m$-internet exploter 11. Please Bill Gates travels to Leon.

2014-05-29  Sergio Martin <sergio.martin@artica.es>

	* mobile/index.php: Disable the mobile console when
	ACL Enterprise is enabled

2014-05-28  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions.php: Improved the Windows
	compatibility of the function "get_snmpwalk".

2014-05-28  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_snmp.php: Improved the security
	on the function "snmp_generate_trap" by escaping the
	command arguments.
	
	* include/functions_snmp_browser.php: Improved the
	Windows compatibility of some commands.

2014-05-28  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/configurar_agente.php: Fixed field that